<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="310dp"
        android:layout_centerInParent="true"
  >

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:hint="@string/app_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="120dp"
            android:background="@drawable/red_colour"

            android:text="@string/cancel" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="9dp"

            android:background="@drawable/green_button"
            android:text="@string/ok" />

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/blue_button_shape">

            <EditText
                android:id="@+id/enterXPlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/player_1"
                android:paddingLeft="20dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />


            <EditText
                android:id="@+id/enterYPlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:hint="@string/player_2"
                android:paddingLeft="20dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"

                />



        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>